unpackaged/main/default/objects/Case/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracking Number</label>
    <referenceTo>Shipping__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>