unpackaged/main/default/objects/Case/fields/Type_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Case__c</fullName>
    <label>Type of Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>About delivery times</fullName>
            </value>
            <value>
                <fullName>About shipment confirmation emails</fullName>
            </value>
            <value>
                <fullName>About shipment's current location</fullName>
            </value>
            <value>
                <fullName>Information about Universal Logistics</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Package was delivered damaged</fullName>
            </value>
            <value>
                <fullName>Package was never delivered or was stolen</fullName>
            </value>
            <value>
                <fullName>Change delivery address</fullName>
            </value>
            <value>
                <fullName>Change contact information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>