unpackaged/main/default/objects/Case/recordTypes/Change_Information.recordType-meta.xml
<RecordType>
    <fullName>Change_Information</fullName>
    <active>true</active>
    <businessProcess>Change Information</businessProcess>
    <label>Change Information</label>
</RecordType>