unpackaged/main/default/objects/Case/recordTypes/Email2Case.recordType-meta.xml
<RecordType>
    <fullName>Email2Case</fullName>
    <active>true</active>
    <businessProcess>Incident</businessProcess>
    <label>Email2Case</label>
</RecordType>