unpackaged/main/default/objects/Case/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <businessProcess>Incident</businessProcess>
    <label>Incident</label>
</RecordType>