unpackaged/main/default/objects/Case/recordTypes/Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Inquiry</fullName>
    <active>true</active>
    <businessProcess>Inquiry</businessProcess>
    <label>Inquiry</label>
</RecordType>