unpackaged/main/default/objects/Case/validationRules/Person_Account_cant_create_Inquiry_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Account_cant_create_Inquiry_case</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = "Inquiry" &amp;&amp; Account.RecordType.Name = "Person Account"</errorConditionFormula>
    <errorMessage>Can't make an Inquiry on a Person Account</errorMessage>
</ValidationRule>