unpackaged/main/default/objects/Case/listViews/Expert_team_tier_1_Case.listView-meta.xml
<ListView>
    <fullName>Expert_team_tier_1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Expert team tier 1</label>
    <queue>Expert_team_tier_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>