unpackaged/main/default/objects/Case/listViews/Expert_team_tier_3_Case.listView-meta.xml
<ListView>
    <fullName>Expert_team_tier_3_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Expert team tier 3</label>
    <queue>Expert_team_tier_3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>