unpackaged/main/default/objects/Case/listViews/Express_Case.listView-meta.xml
<ListView>
    <fullName>Express_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Express</label>
    <queue>Express</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>