unpackaged/main/default/objects/Case/listViews/Golden_Case.listView-meta.xml
<ListView>
    <fullName>Golden_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Golden</label>
    <queue>Golden</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>