unpackaged/main/default/objects/Case/listViews/Platinum_Case.listView-meta.xml
<ListView>
    <fullName>Platinum_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Platinum</label>
    <queue>Platinum</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>