unpackaged/main/default/objects/Case/listViews/Premium_Case.listView-meta.xml
<ListView>
    <fullName>Premium_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Premium</label>
    <queue>Premium</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>