unpackaged/main/default/objects/Case/listViews/Standard_Case.listView-meta.xml
<ListView>
    <fullName>Standard_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard</label>
    <queue>Standard</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>